# raft-rs-zig

./: .gitignore  CLAUDE.md  build.zig  build.zig.zon
docs/: BUG-e2c4aea-process-ready-confchange-gpf.md
raft-sys/: Cargo.toml  build.rs  cbindgen.toml
raft-sys/src/: lib.rs
src/: file_storage.zig  grouped_file_storage.zig  main.zig  manager.zig  root.zig  storage.zig
